--- a/FoodDetection/app/templates/index.html
+++ b/FoodDetection/app/templates/index.html
@@ -1,34 +1,51 @@
-<!doctype html>
+{%load static%}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../static/css/homepage.css" />
     <title>Hello, world!</title>
   </head>
   <body>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
     <div class="container">
       <div class="row main-container">
         <div class="col-2"></div>
-        <div class="col-4">
-          <div class="container-image">
-
-          </div>
+        <div class="col-4 container-image">
+          
+          <img src="{{images.image.url }}" alt="Uploaded Image" />
+          
+          <!-- <img src=".\static\img\tech1.jpg" alt="" /> -->
         </div>
         <div class="col-4">
-          <div class="container-detect"></div>
+          <div class="upload-image">
+            <h2>Upload Image</h2>
+            <form method="post" action="/upload/" enctype="multipart/form-data">
+              {% csrf_token %}
+              <input type="file" name="image" accept="image/*" />
+              <button type="submit">Upload</button>
+            </form>
+          </div>
+          <div class="container-detect">
+            <div><br />Phở bò</div>
+          </div>
         </div>
         <div class="col-2"></div>
       </div>
-      
     </div>
-
   </body>
 </html>
