--- a/FoodDetection/static/css/homepage.css
+++ b/FoodDetection/static/css/homepage.css
@@ -1,13 +1,47 @@
-.container{
-    margin-top: 200px;
+body{
+    background-image:url('backgroundfood.jpg') ;
 }
-.container-image{
+.container{
+    margin-top: 30px;
+    
+}
+.main-container{
+    background-color: white;
+    margin-left: 150px;
+    height: 650px;
+    width: 1000px;
+    border-radius: 50px;
+    padding: 30px;
+    
+}
+.image{
+    margin-top: 20px;
     background-color: aliceblue;
     padding: 20px;
-    height: 300px;
+    height: 350px;
+    border-radius: 20px;
 }
 .container-detect{
+    margin-top: 180px;
     background-color: aliceblue;
     padding: 20px;
-    height: 300px;
+    height: 350px;
+    border-radius: 20px;
+    
+}
+
+.form-upload button{
+    margin-top: 20px;
+    font-weight: 700;
+    border-radius: 20px;
+    height: 50px;
+    width: 145px;
+    background-color: #fff;
+    border: none;
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
+}
+.upfile-button{
+    height: 46px;
+    padding: 8px;
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
 }
