--- a/FoodDetection/app/templates/index.html
+++ b/FoodDetection/app/templates/index.html
@@ -39,7 +39,7 @@
             {% else %}
             <img src="" alt="Uploaded Image" />
             {% endif %}
-            <img src=".\static\img\tech1.jpg" alt="" />
+            <!-- <img src="../../static/uploads/food_long.jpg" alt="" /> -->
           </div>
         </div>
         <div class="col-6">
