--- a/FoodDetection/static/css/homepage.css
+++ b/FoodDetection/static/css/homepage.css
@@ -18,19 +18,23 @@ body{
     margin-top: 20px;
     background-color: aliceblue;
     padding: 20px;
-    height: 350px;
+    height: 370px;
     border-radius: 20px;
     padding: 10px;
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
 }
 .image img{
-  height: 280px;  
+    height: 300px;
+    padding: 20px;
+    margin-left: 10px;
 }
 .container-detect{
     margin-top: 180px;
     background-color: aliceblue;
     padding: 20px;
-    height: 350px;
+    height: 370px;
     border-radius: 20px;
+    box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
     
 }
 
@@ -48,4 +52,7 @@ body{
     height: 46px;
     padding: 8px;
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
+}
+.label_predict{
+
 }
