--- a/FoodDetection/static/css/homepage.css
+++ b/FoodDetection/static/css/homepage.css
@@ -7,9 +7,9 @@ body{
 }
 .main-container{
     background-color: white;
-    margin-left: 150px;
+
     height: 650px;
-    width: 1000px;
+    width: 1300px;
     border-radius: 50px;
     padding: 30px;
     
@@ -29,7 +29,7 @@ body{
     margin-left: 10px;
 }
 .container-detect{
-    margin-top: 180px;
+    margin-top: 190px;
     background-color: aliceblue;
     padding: 20px;
     height: 370px;
@@ -49,8 +49,10 @@ body{
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
 }
 .upfile-button{
-    height: 46px;
-    padding: 8px;
+    height: 54px;
+    padding: 12px;
+    width: 489px ;
+    border-radius: 20px;
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
 }
 .label_predict{
