--- a/FoodDetection/static/css/homepage.css
+++ b/FoodDetection/static/css/homepage.css
@@ -5,14 +5,21 @@ body{
     margin-top: 30px;
     
 }
-.main-container{
+.container{
     background-color: white;
-
-    height: 650px;
     width: 1300px;
     border-radius: 50px;
     padding: 30px;
     
+}
+.container-desc{
+    margin-top: -130px;
+}
+.image-percent{
+    margin-top: 170px;
+}
+.per{
+    display: none;
 }
 .image{
     margin-top: 20px;
@@ -24,7 +31,7 @@ body{
     box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.133);
 }
 .image img{
-    height: 300px;
+    height: 75%;
     padding: 20px;
     margin-left: 10px;
 }
